WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30431
Insecure plug-ins don't trigger mixed content
https://bugs.webkit.org/show_bug.cgi?id=30431
Summary
Insecure plug-ins don't trigger mixed content
Adam Barth
Reported
2009-10-15 23:31:18 PDT
Patch forthcoming.
Attachments
Patch v1
(4.41 KB, patch)
2009-10-15 23:54 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-10-15 23:54:32 PDT
Created
attachment 41273
[details]
Patch v1
Eric Seidel (no email)
Comment 2
2009-10-16 13:21:21 PDT
Comment on
attachment 41273
[details]
Patch v1 Looks right to me.
WebKit Commit Bot
Comment 3
2009-10-16 14:30:16 PDT
Comment on
attachment 41273
[details]
Patch v1 Clearing flags on attachment: 41273 Committed
r49700
: <
http://trac.webkit.org/changeset/49700
>
WebKit Commit Bot
Comment 4
2009-10-16 14:30:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug