2009-10-16  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Insecure plug-ins don't trigger mixed content
        https://bugs.webkit.org/show_bug.cgi?id=30431

        * http/tests/security/mixedContent/insecure-plugin-in-iframe-expected.txt: Added.
        * http/tests/security/mixedContent/insecure-plugin-in-iframe.html: Added.
        * http/tests/security/mixedContent/resources/frame-with-insecure-plugin.html: Added.
2009-10-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Insecure plug-ins don't trigger mixed content
        https://bugs.webkit.org/show_bug.cgi?id=30431

        Added the missing check.

        Test: http/tests/security/mixedContent/insecure-plugin-in-iframe.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::loadPlugin):

Canonical link: https://commits.webkit.org/41160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49700 268f45cc-cd09-0410-ab3c-d52691b4dbfc