WebCore/loader/FrameLoader.cpp
@@ -1309,6 +1309,8 @@ bool FrameLoader::loadPlugin(RenderPart* renderer, const KURL& url, const String
             return false;
         }
 
+        checkIfRunInsecureContent(m_frame->document()->securityOrigin(), url);
+
         widget = m_client->createPlugin(IntSize(renderer->contentWidth(), renderer->contentHeight()),
                                         element, url, paramNames, paramValues, mimeType,
                                         m_frame->document()->isPluginDocument() && !m_containsPlugIns);
